[package]
name = "pdm"
version = "1.0.0"
edition = "2021"
authors = ["唐溪"]
description = "@云溪起源 制作的多线程并发下载器"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures = { version = "0.3", features = ["std"] }
indicatif = "0.17"
anyhow = "1.0"
bytes = "1.4"
clap = { version = "4.2", features = ["derive"] } 